<resources>
    <string name="app_name">Criminalintent</string>
    <string name="crime_title_hint"> Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_bt_go_to_first">Go to First</string>
    <string name="crime_bt_go_to_end">Go to End</string>
    <string name="date_picker_title">Date of crime: </string>
    <string name="alter_dialog_ok">OK</string>
    <string name="alter_dialog_cancel">Cancel</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1d crimes</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1s! The crime was discovered on %2s,%3s,and %4s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send Crime report via</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
